--- a/tracer-horyzn/src/app/app.component.html
+++ b/tracer-horyzn/src/app/app.component.html
@@ -16,28 +16,22 @@
   <!-- Main Page content Placement-->
   <div class="content">
     <section id="home">
-      <img src="assets/microscope.jpg" alt="Trulli" width="100%" height="750">
+      <img src="assets/background.jpeg" alt="Evtol" width="100%" height="750">
     </section>
   <!-- The Problem Staement Section   -->
     <section id="problem-statement">
       <div class="problem-statement">
         <h1>Problem Statement</h1>
-        <p class="para">As healthcare companies like Merck develop drugs to deal with the world’s most challenging diseases, 
-          one major issue is to make sure that patients are safe, while still benefiting from an effective drug. After drugs are approved and launched, cases have arisen where patients suffer from rare 
-          adverse and severe side effects that have gone undetected in clinical development and 
-          comprehensive testing. In phase 4 trials or pharmacovigilance, drugs are continuously 
-          observed to evaluate the long-term patient care and safety as part of post-market surveillance 
-          practices. Once adverse effects are detected, the necessary intervention can be taken to 
-          minimize the risks and thus improve patient outcomes as a whole. Today drug adverse events
-          are often detected too late which often results in lawsuits against pharmaceutical companies. 
-          One example is Merck & Co had to pay 4.85 billion dollars in  settlements related to their 
-          painkiller Vioxx which was accused for causing heavy cardiovascular effects. 
-          Other companies that have been charged with notable lawsuits include Takeda and 
-          GlaxoSmithKline. A study by the FDA found that in only the United States, 
-          around 2.2 million patients are hospitalized annually due to serious adverse 
-          drug reactions <a href="https://www.fda.gov/drugs/drug-interactions-labeling/preventable-adverse-drug-reactions-focus-drug-interactions). In addition, 100,000 deaths annually have been associated to adverse drug events (https://www.fda.gov/drugs/drug-interactions-labeling/preventable-adverse-drug-reactions-focus-drug-interactions"></a>. 
-          In addition, 100,000 deaths annually have been associated to adverse drug events 
-          <a href="https://www.fda.gov/drugs/drug-interactions-labeling/preventable-adverse-drug-reactions-focus-drug-interactions"></a>.</p>
+        <p class="para">HORYZN’s Mission Pulse aims to build an
+          emergency unmanned aerial vehicle (UAV) to
+          deliver a defibrillator. In Germany, 75,000
+          patients experience sudden cardiac arrest every
+          year and only 11 % survive. The survival rate
+          can be tripled, by shortening the ambulance‘s
+          response time from 9 to 4 minutes. Since the
+          UAV will serve populated areas, flight safety
+          plays a fundamental role and can be enhanced
+          by developing an AI using aerial imagery.</p>
       </div>
       </section>
   <!-- The Demo Section -->
