--- a/tracer-horyzn/src/app/app.component.html
+++ b/tracer-horyzn/src/app/app.component.html
@@ -7,8 +7,6 @@
     <a href="#problem-statement">Problem Statement</a>
     <a href="#analytics">Demo</a>
     <a href="#user">User Journey</a>
-    <a href="#about-us">About Us</a>
-    <a href="#our-team">Our Team</a>
     <a href="#partners">Our Partners</a>
     <a href="#contact">Contact Us</a>
   </div>
@@ -37,15 +35,13 @@
   <!-- The Demo Section -->
        <section id="analytics">
           <h1>Demo</h1>
-        <h2>Ibuprofen caused dizziness</h2>
-          <button onclick="document.getElementById('id01').style.display='block'">Ibuprofen caused dizziness</button>
+        <h2>Detection Screen-1</h2>
+          <button onclick="document.getElementById('id01').style.display='block'">Pedestrian Detection</button>
           <div id="id01" class="modal">
             <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
             <form class="modal-content" action="/action_page.php">
               <div class="container">
-                <img src="assets/stringibuprofen caused dizziness.png" alt="Shruti Pistolwala"  width="700" 
-                height="500">
-                <img src="assets/circuitibuprofen caused dizziness.png" alt="Shruti Pistolwala"  width="600" 
+                <img src="assets/Gif1_v1_010.gif" alt="Pedestrian Detection"  width="700" 
                 height="500">
               </div>
             </form>
@@ -58,15 +54,13 @@
               }
             }
             </script>
-         <h2>Ibuprofen introduced burning musclepain</h2>
-          <button onclick="document.getElementById('id02').style.display='block'">Ibuprofen introduced burning musclepain</button>
+         <h2>Detection Screen-2</h2>
+          <button onclick="document.getElementById('id02').style.display='block'">Moving Object Detection</button>
           <div id="id02" class="modal">
             <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
             <form class="modal-content" action="/action_page.php">
               <div class="container">
-                <img src="assets/stringibuprofen introduced burning musclepain.png" alt="Shruti Pistolwala"  width="800" 
-                height="500">
-                <img src="assets/circuitibuprofen introduced burning musclepain.png" alt="Shruti Pistolwala"  width="600" 
+                <img src="assets/Gif2_v2_black_010.gif" alt="Moving Object"  width="800" 
                 height="500">
               </div>
             </form>
@@ -79,279 +73,52 @@
               }
             }
             </script>
-          <h2>Injection caused severe chestpain</h2>
-          <button onclick="document.getElementById('id03').style.display='block'">Injection caused severe chestpain</button>
-          <div id="id03" class="modal">
-            <span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;</span>
-            <form class="modal-content" action="/action_page.php">
-              <div class="container">
-                <img src="assets/stringinjection caused severe chestpain.png" alt="Shruti Pistolwala"  width="600" 
-                height="500">
-                <img src="assets/circuitinjection caused severe chestpain.png" alt="Shruti Pistolwala"  width="600" 
-                height="500">
-              </div>
-            </form>
-          </div>
-          <script>
-            var modal = document.getElementById('id03');
-            window.onclick = function(event) {
-              if (event.target == modal) {
-                modal.style.display = "none";
-              }
-            }
-            </script>
-          <h2>Injection introduced severe dizziness</h2>
-          <button onclick="document.getElementById('id04').style.display='block'">Injection introduced severe dizziness</button>
-          <div id="id04" class="modal">
-            <span onclick="document.getElementById('id04').style.display='none'" class="close" title="Close Modal">&times;</span>
-            <form class="modal-content" action="/action_page.php">
-              <div class="container">
-                <img src="assets/stringinjection introduced severe dizziness.png" alt="Shruti Pistolwala"  width="600" 
-                height="500">
-                <img src="assets/circuitinjection introduced severe dizziness.png" alt="Shruti Pistolwala"  width="600" 
-                height="500">
-              </div>
-            </form>
-          </div>
-          <script>
-            var modal = document.getElementById('id04');
-            window.onclick = function(event) {
-              if (event.target == modal) {
-                modal.style.display = "none";
-              }
-            }
-            </script>
-          <h2>Injection improved dizziness</h2>
-          <button onclick="document.getElementById('id05').style.display='block'">Injection improved dizziness</button>
-          <div id="id05" class="modal">
-            <span onclick="document.getElementById('id05').style.display='none'" class="close" title="Close Modal">&times;</span>
-            <form class="modal-content" action="/action_page.php">
-              <div class="container">
-                <img src="assets/stringinjection improved dizziness.png" alt="Shruti Pistolwala"  width="600" 
-                height="500">
-                <img src="assets/circuitinjection improved dizziness.png" alt="Shruti Pistolwala"  width="600" 
-                height="500">
-              </div>
-            </form>
-          </div>
-          <script>
-            var modal = document.getElementById('id05');
-            window.onclick = function(event) {
-              if (event.target == modal) {
-                modal.style.display = "none";
-              }
-            }
-            </script>
         </section>  
   <!-- The User Journey Section -->
      <section id="user">
       <div class="user">
         <h1>User Journey</h1>
-        <p>John Doe is a patient safety officer in a large 
-          pharmaceutical company and wants to figure out the adverse events associated to a drug called aspirin. </p>
+        <p> </p>
         <div class="row">
           <div class="column">
             <img src="assets/screen-1.png" alt="Snow" style="width:100%;height:400px;">
-            <figcaption>Log in page: John Doe logs in to our qTex analytics platformt</figcaption>
+            <figcaption>Scene-1</figcaption>
           </div>
           <div class="column">
             <img src="assets/screen-2.png" alt="Forest" style="width:100%;height:400px;">
-            <figcaption>Overview page of clinical trials: He sees an overview of all the clinical trials his company is monitoring and clicks on Espirin</figcaption>
+            <figcaption>Sceen-2</figcaption>
           </div>
           <div class="column">
             <img src="assets/screen-3.png" alt="Forest" style="width:100%;height:400px;">
-            <figcaption>Overview of graphs and charts: He sees various graphs and charts of the classifications of data that his company has been logging and classifying. He finds that Espirin seems to have a significant number of adverse events associated to severe dizziness. </figcaption>
+            <figcaption>Scene-3</figcaption>
           </div>
           <div class="column">
             <img src="assets/screen-4.png" alt="Forest" style="width:100%;height:400px;">
-            <figcaption>Detailed Overview: John sees further details like a time series analysis and heat map. He now gets a better understanding that severe dizziness is highly correlated with Espirin. </figcaption>
-          </div>
-          <div class="column">
-            <img src="assets/screen-5.png" alt="Forest" style="width:100%;height:400px;">
-            <figcaption>AE tree: He wants to compare the results with the other clinical trials and sees that Espirin is the only drug associated to severe dizziness</figcaption>
-          </div>
-          <div class="column">
-            <img src="assets/screen-6.png" alt="Forest" style="width:100%;height:400px;">
-            <figcaption>Data Preview page: John can see how the sentences have been classified into zeros no adverse event exist) and ones (adverse event exists). He can export the dataset into a CSV file.</figcaption>
-          </div>
-          <div class="column">
-            <img src="assets/screen-7.png" alt="Forest" style="width:100%;height:400px;">
-            <figcaption>Data Preview page: John can see how the sentences have been classified into zeros no adverse event exist) and ones (adverse event exists). He can export the dataset into a CSV file.</figcaption>
-          </div>
-          <div class="column">
-            <img src="assets/screen-8.png" alt="Forest" style="width:100%;height:400px;">
-            <figcaption>Logout: He logs out and can inform his colleagues to closely monitor that Espirin signals some risk of severe dizziness. </figcaption>
+            <figcaption>Scene-4</figcaption>
           </div>
         </div>
         </div>
       </section> 
-  <!-- The About Us Section -->
-      <section id="about-us">
-        <div class="about-us">
-          <h1>About Us</h1>
-          <p class="para">At qTex, we leverage quantum computing to classify drug adverse effects to facilitate better patient experience. 
-            Our unique selling point is classification technology that uses quantum natural language processing. 
-            Three key benefits for pharmaceutical companies and their patients are as follows: 
-            <br>
-            1) More peace of mind
-            <br>
-            2) More patient security
-            <br>
-            3) More hidden insights in drug adverse events.</p>
-        </div>
-        </section>
-  <!-- Our Team Section -->
-      <section id="our-team">
-        <h1 style="text-align:center">Our Team</h1>
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <img src="assets/shruti_pistolwala.jpeg" alt="Shruti Pistolwala"  width="100%" 
-              height="500">
-              <div class="container">
-                <h2>Shruti Pistolwala</h2>
-                <p class="title">Software & Hardware Specialist</p>
-                <p>
-                  <span>
-                    <a href="mailto:shruti.pistolwala@tum.de">shruti.pistolwala@tum.de</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <img src="assets/clarissa.PNG" alt="E. Clarissa Anjani"  width="100%" height="500">
-              <div class="container">
-                <h2>E. Clarissa Anjani</h2>
-                <p class="title">Business Development Specialist</p>
-                <p>
-                  <span>
-                    <a href="mailto:e.clarissa.anjani@gmail.com">e.clarissa.anjani@gmail.com</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <img src="assets/philip.jpeg" alt="Philipp Zent" width="100%" height="500">
-              <div class="container">
-                <h2>Philipp Zent</h2>
-                <p class="title">Business Development Specialist</p>
-                <p>
-                  <span>
-                    <a href="mailto:philipp.zent@icloud.com">philipp.zent@icloud.com</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <img src="assets/fredy.jpeg" alt="Friederike Butt" width="100%" height="500">
-              <div class="container">
-                <h2>Friederike Butt</h2>
-                <p class="title">Quantum Specialist</p>
-                <p>
-                  <span>
-                    <a href="mailto:friederike.butt@rwth-aachen.de">friederike.butt@rwth-aachen.de</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <img src="assets/sebastian.jpeg" alt="Sebastian Soldner" width="100%" height="500">
-              <div class="container">
-                <h2>Sebastian Soldner</h2>
-                <p class="title">Business Development Specialist</p>
-                <p>
-                  <span>
-                    <a href="mailto:sebastian.soldner@tum.de">sebastian.soldner@tum.de</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <img src="assets/kevin.jpeg" alt="Kevin Shen" width="100%" height="500">
-              <div class="container">
-                <h2>Kevin Shen</h2>
-                <p class="title">Quantum Specialist</p>
-                <p>
-                  <span>
-                    <a href="mailto:kevinshen.kevinshen@gmail.com">kevinshen.kevinshen@gmail.com</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <img src="assets/thomas.jpeg" alt="Thomas Ehmer" width="100%" height="500">
-              <div class="container">
-                <h2>Thomas Ehmer</h2>
-                <p class="title">Advisor</p>
-                <p>
-                  <span>
-                    <a href="mailto:Thomas.Ehmer@merckgroup.com">Thomas.Ehmer@merckgroup.com</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>      
-          <div class="column">
-            <div class="card">
-              <img src="assets/insa.jpeg" alt="Insa M. Mohr" width="100%" height="500">
-              <div class="container">
-                <h2>Insa M. Mohr</h2>
-                <p class="title">Advisor</p>
-                <p>
-                  <span>
-                    <a href="mailto:insa.mohr@merckgroup.com">insa.mohr@merckgroup.com</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <img src="assets/harsha.jpeg" alt="Dr. Harsha Gurulingappa" width="100%" height="500">
-              <div class="container">
-                <h2>Dr. Harsha Gurulingappa</h2>
-                <p class="title">Advisor</p>
-                <p>
-                  <span>
-                    <a href="mailto:harsha.gurulingappa@merckgroup.com">harsha.gurulingappa@merckgroup.com</a>
-                  </span>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        </section>
+ 
   <!-- Our Partner Section -->
         <section id="partners">
           <div class="partners">
           <h1>Our Partners</h1>
           <div class="row">
             <div class="column">
-              <img src="assets/cqc.png" alt="Snow" style="width:100%;height:400px;">
+              <img src="assets/Screenshot_3.png" alt="Horyzn" style="width:100%;height:400px;">
             </div>
             <div class="column">
-              <img src="assets/merck.jpeg" alt="Forest" style="width:100%;height:400px;">
+              <img src="assets/Makeathon_Logo_final_october.png" alt="TUM.ai" style="width:100%;height:400px;">
             </div>
             <div class="column">
-              <img src="assets/push.png" alt="Forest" style="width:100%;height:400px;">
+              <img src="assets/tum venture labslogo.png" alt="TUM Venture Lab" style="width:100%;height:400px;">
             </div>
             <div class="column">
-              <img src="assets/tum.png" alt="Forest" style="width:100%;height:400px;">
+              <img src="assets/appliedai_logo_dark.png" alt="Applied AI" style="width:100%;height:400px;">
             </div>
             <div class="column">
-              <img src="assets/venture.jpeg" alt="Forest" style="width:100%;height:400px;">
+              <img src="assets/Microsoft_Logo.png" alt="Microsoft" style="width:100%;height:300px;">
             </div>
           </div>
           </div>
@@ -364,7 +131,7 @@
           </div>
           <div class="row">
             <div class="column-1">
-              <img src="assets/contact-us.jpg" width="100%" height="500">
+              <img src="assets/gamma-scaled.jpeg" width="100%" height="500">
             </div>
             <div class="column">
               <form action="https://formspree.io/f/mzbyjqej"method="POST">
@@ -389,7 +156,6 @@
       </section>
   <!-- The Footer Section -->
         <footer>
-          <p>© 2021 qTex. All rights reserved. |          
-              Hosted By: <a href="https://trudawnsolutions.com/">Trudawn Solutions</a> | Made By: Shruti Pistolwala
+          <p>© 2021 Tracer. All rights reserved.
       </footer>
   </div>
